--- a/Mern stack/client/package.json
+++ b/Mern stack/client/package.json
@@ -13,9 +13,13 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
-    "react": "^19.0.0",
+    "framer-motion": "^12.6.5",
+    "lucide": "^0.487.0",
+    "lucide-react": "^0.487.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
